adding icons and user search

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,57 +8,6 @@
     android:id="@+id/drawer_layout">
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-
-
-            android:layout_marginTop="324dp"
-
-            android:layout_marginEnd="104dp"
-            android:ellipsize="start"
-            android:padding="5dp"
-            android:text="Click start to begin"
-            android:textColor="@color/purple_200"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/getLocation"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="43dp"
-            android:layout_marginEnd="83dp"
-            android:text="Start" />
-
-        <Button
-            android:id="@+id/getLocation2"
-            android:layout_width="179dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="115dp"
-            android:layout_marginTop="133dp"
-            android:text="Stop" />
-
-
-    </RelativeLayout>
-
-
-
-
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -73,9 +22,77 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+
+
+                android:layout_alignParentEnd="true"
+
+                android:layout_marginStart="98dp"
+                android:layout_marginTop="189dp"
+                android:layout_marginEnd="99dp"
+                android:ellipsize="start"
+                android:padding="5dp"
+                android:text="Click start to begin"
+                android:textColor="@color/purple_200"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/getLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="61dp"
+                android:layout_below="@+id/textView"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="78dp"
+                android:layout_marginTop="34dp"
+                android:layout_marginEnd="83dp"
+                android:text="Start" />
+
+            <Button
+                android:id="@+id/getLocation2"
+                android:layout_width="138dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="131dp"
+                android:layout_marginTop="124dp"
+                android:layout_marginEnd="142dp"
+                android:backgroundTint="#FF9292"
+                android:text="Stop" />
+
+            <Button
+                android:id="@+id/convertToPoints"
+                android:layout_width="207dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="97dp"
+                android:layout_marginTop="197dp"
+                android:layout_marginEnd="107dp"
+                android:text="Claim Points" />
+
+
+        </RelativeLayout>
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
