--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -3,10 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/nav_account"
         android:title="Home"
+        android:icon="@drawable/ad1"
         tools:ignore="HardcodedText" />
     <item android:id="@+id/nav_home"
         android:title="Routines"
-        tools:ignore="HardcodedText"/>
+        tools:ignore="HardcodedText"
+        android:icon="@drawable/home_icon"/>
     <item android:id="@+id/nav_routines"
         android:title="Store"
         tools:ignore="HardcodedText"/>
